--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,9 @@
 # MYSQL
-#server.port=9000
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/lp3?useTimezone=true&serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.testWhileIdle = true
-#spring.datasource.validationQuery = SELECT 1
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-#spring.jpa.show-sql = true
-
-#POSTGRESQL
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/sgh?useTimezone=true&serverTimezone=UTC
-spring.datasource.username=postgres
+server.port=9000
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/lp3?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql = true
