--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
-	compile(group: 'org.postgresql', name: 'postgresql', version: '42.2.19')
+	runtimeOnly 'mysql:mysql-connector-java'
 }
 
 test {
